# poc-openrouter

./: .gitignore  README.md  poc-openrouter.code-workspace  pyproject.toml
docs/: ReAct pattern for LLMs in Python.md  sequence-01.puml  which-gpt-4?.md
notebooks/: 01-ReAct-pattern.ipynb  02-ReAct-langgraph.ipynb  03-Agentic-Searcher.ipynb  start-notebooks.sh
src/poc_openrouter/: ReAct_pattern_01.py  ReAct_pattern_02.py  t1.py  t1_ds.py  t2.py  t2_ds.py
src/poc_openrouter/nvidia/: t1.py
src/poc_openrouter/tavily/: searcher.py
type-script/: package-lock.json  package.json
