[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poc-openrouter"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [{ name = "U.N. Owen", email = "void@some.where" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["requests", "openai", "langchain", "langgraph"]

[project.urls]
Documentation = "https://github.com/U.N. Owen/poc-openrouter#readme"
Issues = "https://github.com/U.N. Owen/poc-openrouter/issues"
Source = "https://github.com/U.N. Owen/poc-openrouter"

[tool.hatch.version]
path = "src/poc_openrouter/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/poc_openrouter tests}"

[tool.coverage.run]
source_pkgs = ["poc_openrouter", "tests"]
branch = true
parallel = true
omit = ["src/poc_openrouter/__about__.py"]

[tool.coverage.paths]
poc_openrouter = ["src/poc_openrouter", "*/poc-openrouter/src/poc_openrouter"]
tests = ["tests", "*/poc-openrouter/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
